# ivy-mono

./: MODULE.bazel  README.md  events.jsonl
ivy/: .clang-format  .clangd  .gitignore  BUILD.bazel  README.md  SECURITY.md  declare_id.txt  gen_disc.py
ivy-aggregator/: .gitignore  BUILD.bazel  Cargo.toml  README.md  ivy-aggregator.service  mk_event_rs.py  spec.yaml
ivy-aggregator/src/: applier.rs  chart.rs  charts.rs  event.rs  game.rs  hydrator.rs  jsonl.rs  main.rs  pf.rs  pricer.rs  public.rs  quote.rs  retriever.rs  scanner.rs  server.rs  signature.rs  sqrt_curve.rs  state.rs  tv_board.rs  util.rs  volume.rs
ivy-aggregator/src/routes/: assets.rs  comments.rs  games.rs  info.rs  misc.rs  mod.rs  price.rs  stream_assets.rs  stream_game.rs  stream_ivy.rs  stream_sync.rs  stream_trades.rs  streaming.rs  sync.rs  types.rs  volume.rs
ivy-aggregator/src/state/: constants.rs  helpers.rs  mod.rs  types.rs
ivy-aggregator/src/types/: asset.rs  chart.rs  charts.rs  event.rs  game.rs  leaderboard.rs  mod.rs  public.rs  signature.rs  source.rs  sync.rs  trade.rs
ivy-backend/: .gitignore  BUILD.bazel  README.md  ivy-backend.service  package-lock.json  package.json  tsconfig.json
ivy-backend/src/: cli.ts  constants.ts  index.ts  priority-fee.ts  sol_price.ts  util.ts
ivy-backend/src/commands/: create-test-games.ts  debug-mint.ts  game-edit.ts  game-upgrade.ts  load-world.ts  new-game.ts  new-world.ts  set-owner.ts  set-params.ts  world-swap.ts
ivy-backend/src/functions/: confirmTransaction.ts  debugMint.ts  getEffects.ts  requestAirdrop.ts
ivy-backend/src/routes/: assets.ts  chain.ts  gameTx.ts  games.ts  ids.ts  price.ts  root.ts  sync.ts  transactions.ts
ivy-backend/src/types/: deps.ts
ivy-backend/src/utils/: cache.ts  keypair.ts  requestHelpers.ts  transactions.ts
ivy-docs/: .gitignore  BUILD.bazel  build.py  mkdocs.yml  requirements.txt
ivy-docs/src/: amounts.md  authentication.md  deposits.md  example-1-cat.md  example-2-leaderboard.md  example-3-faucet.md  example.md  games.md  identifiers.md  index.md  profiles.md  syncs.md  token.md  withdrawals.md
ivy-frontend/: .gitignore  BUILD.bazel  README.md  default.conf  dev_router.php  fetch_icon.sh  jetbrains-mono.css  tailwind.config.js  tailwind.css  test.js  test_server.py
ivy-frontend/includes/: api.php  constants.php  fmt.php  footer.php  game.php  header.php  icon.php  notification.php  pagination.php
ivy-frontend/public/: 404.php  about.php  about_22.php  about_new.php  about_new10.php  about_new11.php  about_new12.php  about_new2.php  about_new3.php  about_new4.php  about_new5.php  about_new6.php  about_new7.php  about_new8.php  about_new9.php  api.php  burn-complete.php  burn.php  deposit-complete.php  deposit.php  docs.php  edit-confirm.php  edit-done.php  edit.php  game.php  index.php  keygen.php  launch-confirm.php  launch-done.php  launch.php  payment-complete.php  payment.php  privacy.txt  qqq.html  search.php  sync-launch-confirm.php  sync-launch-done.php  sync-launch.php  terms.txt  token.php  (+5 more)
ivy-r128/: .gitignore  BUILD.bazel  Cargo.toml  README.md  build.rs  cbindgen.toml  patch.py
ivy-r128/src/: lib.rs
ivy-react/: .gitignore  BUILD.bazel  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  widget-compiler.ts
ivy-react/app/: globals.css  index.tsx  page.tsx
ivy-react/app/profile/: page.tsx
ivy-react/app/sync/: page.tsx
ivy-react/app/token/: page.tsx
ivy-react/components/: TradeTicker.tsx  TxWidget.tsx  WalletButton.tsx  frame.tsx
ivy-react/components/chart/: ChartBase.tsx  ChartHeader.tsx  chartTypes.ts
ivy-react/components/display/: Comments.tsx  GFrame.tsx  GameDisplay.tsx  SyncDisplay.tsx  TreasuryManager.tsx  WorldDisplay.tsx  util.ts
ivy-react/components/game-display/: Comments.tsx  Description.tsx  GFrame.tsx  GameDisplay.tsx  SyncDisplay.tsx  TreasuryManager.tsx  WorldDisplay.tsx  fetchQuoteInternal.ts  useChartData.ts
ivy-react/components/swap/: BalanceProvider.tsx  CurrencyInput.tsx  DecimalInput.tsx  QuoteProvider.tsx  SlippageDialog.tsx  SwapButton.tsx  SwapErrorView.tsx  SwapInfo.tsx  SwapInput.tsx  SwapProvider.tsx  SwapSuccessView.tsx  SwapTokenSelector.tsx  SwapWidget.tsx  TokenSelect.tsx  swapTypes.ts
ivy-react/components/tasks/: HotTask.tsx  NewTask.tsx
ivy-react/components/ui/: alert-dialog.tsx  base-dialog.tsx  skeleton.tsx  spinner.tsx
ivy-react/components/wallet/: WModal.tsx  WProvider.tsx  WalletProvider.tsx
ivy-react/lib/: analytics.ts  api.ts  constants.ts  curve.ts  execute.ts  game.ts  hooks.ts  hooks.tsx  jup.ts  quote.ts  useAssetsStream.ts  useGameStream.ts  useMediaQuery.ts  useQuote.ts  useSteps.ts  useSyncQuote.ts  useSyncStream.ts  useTradesStream.ts  useWorldStream.ts  utils.ts
ivy-sdk/: .gitignore  BUILD.bazel  README.md  package-lock.json  package.json  test.py  tsconfig.json
ivy-sdk/src/: auth.ts  comment.ts  event.ts  game.ts  id.ts  index.ts  interface.ts  mix.ts  profile.ts  sync-curve.ts  sync-global.ts  sync-pool.ts  sync.ts  vault.ts  world.ts
ivy-sdk/src/idl/: Metadata.json
ivy-validator/: .gitignore  BUILD.bazel
ivy-validator/accounts/: 2FPyTwcZLUg1MDrwsyoP4D6s1tM7hAkHYRjkNb5w6Pxk.json  5pddDLA4taryBwRYGdtKmS9qkwssXD8vHECeNbCZnwUy.json  6dM4TqWyWJsbx7obrdLcviBkTafD5E8av61zfU6jq57X.json  8LfiSAHzkKFsPCkwqYu11YtyhdN5dHTyDZc5trujPubg.json  8c3zk1t1qt3RU43ckuvPkCS7HLbjJqq3J3Me8ov4aHrp.json  9n4nbM75f5Ui33ZbPYXn59EwSgE8CGsHtAeTH5YFeJ9E.json  DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263.json  DoUzcGboYXXwpcKp7eEy65fdKLFyroAVyWuRZgrS6mj4.json  EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v.json  Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB.json  F4zNPXoqasVow544cKMQTPaVW4kmxaJXiN9PG9vqcjDt.json  FDZZbyY9XGpL3CNKUZxLk3wFTTQYL3TkDiDzqxrizcPN.json  HZ1JovNiVvGrGNiiYvEozEVgZ58xaU3RKwX8eACQBCt3.json  JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN.json  So11111111111111111111111111111111111111112.json
ivy/idl/: anchor.py  main.py  parser.py  requirements.txt  ty.py
ivy/src/: comment.h  cp_curve.h  game.h  idl.h  main.c  mix.h  safe_math.h  sqrt_curve.h  sync.h  util.h  vault.h  world.h
(+47 files in other folders)
