genrule(
    name = "generate",
    srcs = ["//ivy:idl/ivy.json", "mk_event_rs.py"],
    local = True,
    cmd = """
        ROOT_DIR=$$(pwd)
        cd $$(dirname $(location mk_event_rs.py))
        python3 mk_event_rs.py $$ROOT_DIR/$(location //ivy:idl/ivy.json) > src/types/event.rs
        date +%s.%N > $$ROOT_DIR/$@
    """,
    outs = ["generate.marker"],
)

genrule(
    name = "build",
    srcs = glob(["src/**/*.rs"]) + ["Cargo.toml", "Cargo.lock", ":generate"],
    local = True,
    cmd = """
        ROOT_DIR=$$(pwd)
        cd $$(dirname $(location Cargo.toml))
        cargo build --release
        cp ./target/release/ivy-aggregator $$ROOT_DIR/$@
    """,
    outs = ["ivy-aggregator"],
)

genrule(
    name = "dev",
    srcs = ["//ivy:idl/ivy.json", ":build", "Cargo.toml"],
    local = True,
    cmd = """
        ROOT_DIR=$$(pwd)
        EXEC_DIR=$$(pwd)/$$(dirname $(location Cargo.toml))

        cat > "$@" << EOF
#!/bin/sh

# Go to ivy-aggregator directory
# (This prevents priv from leaking somewhere
# where there isn't a .gitignore to not include it)
cd $${EXEC_DIR}

# Delete the old priv if it exists
rm -rf ./priv

# Run the program with the current program ID
PROGRAM_ID=$$(cat $$ROOT_DIR/$(location //ivy:idl/ivy.json) | python3 -c 'import json,sys;print(json.load(sys.stdin)["address"],end="")') \
    ./target/release/ivy-aggregator

EOF
        # Make the created script executable
        chmod +x "$@"
    """,
    outs = ["dev.sh"],
    executable = True,
    tags = ["manual"],
)
