[package]
name = "ivy-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.4"
borsh = { version = "1.5.7", features = ["derive"] }
bs58 = "0.5.1"
futures = "0.3"
hex = "0.4.3"
priority-queue = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["cors", "normalize-path"] }
tower-layer = "0.3.3"
ureq = { version = "3.0.10", features = ["json"] }
