genrule(
    name = "build",
    srcs = glob(["src/**/*.rs", "Cargo.toml", "patch.py"]),
    local = True,
    cmd = """
        ROOT_DIR=$$(pwd)
        cd $$(dirname $(location Cargo.toml))
        # clear previous output
        rm -f ./target/sbf-solana-solana/release/libr128.a
        rm -f ./target/sbf-solana-solana/release/r128.h
        # make rust rerun build script
        touch build.rs
        # generate library + headers
        HOME="/home/$$(echo "$$ROOT_DIR" | cut -d'/' -f3)" cargo build-sbf
        # patch headers
        python3 patch.py ./target/sbf-solana-solana/release/r128.h
        # copy to outfiles
        cp ./target/sbf-solana-solana/release/r128.h $$ROOT_DIR/$(location r128.h)
        cp ./target/sbf-solana-solana/release/libr128.a $$ROOT_DIR/$(location libr128.a)
    """,
    outs = ["r128.h", "libr128.a"],
    visibility = ["//visibility:public"],
)
